feat: creates book pagination
